conditions.Conditions.scala.error
Compilation error:
Conditions:7: error: Unmatched closing brace '}' ignored here
	}
        ^